samples/_failures_safe/1761466245_ed7e12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53d84ac3.c: In function ‘main’:
./samples/SAFE/__tmp_53d84ac3.c:133:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  133 |             int found
      |             ^~~
./samples/SAFE/__tmp_53d84ac3.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53d84ac3.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53d84ac3.c:133:13: error: expected declaration or statement at end of input
